Thu Sep 12 16:24:41 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): New variable.
	(libpipe.so): Delete special dependency.

Tue Jul 16 11:33:34 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* pipe.h (EWOULDBLOCK): Define to work around new libc bug.

Mon Jul  1 17:29:07 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* pq.c (pq_queue): Initialize PACKET->buf_vm_alloced.

Tue Jan 23 12:44:40 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* pq.h (packet_ensure, packet_ensure_efficiently): Use packet_fit().
	(packet_fit): New function.
	* pq.c (packet_read): If there's lots of empty space at the
	beginning of a vm_alloced buffer, deallocate it.

Mon Jan 22 17:12:39 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* pq.c (packet_realloc): Reflect in the new values of BUF_START &
	BUF_END that we've removed any empty space at the beginning of BUF.

Sat Jan 13 13:56:13 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* pq.h 	(packet_ensure, packet_ensure_efficiently): Use
	packet_new_size() instead of packet_size_adjust().
	(packet_size_adjust): Declaration removed.
	(packet_new_size): New declaration.
	* pq.c (packet_size_adjust): Function removed.
	(packet_new_size): New function.
	
	* pq.c (packet_read): Re-arrange to be slightly less confusing.
	Reverse start-past-buf-beginning test that may have leaked memory.

	* pipe.c (pipe_send): For non-blocking writes, avoid writing more
	than the user requested.

Fri Jan 12 12:15:06 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* pq.c (pq_queue): Initialize the ports_alloced field.
  	(packet_read): When a page-aligned read consumes the whole buffer,
 	but there's a non-page-multiple amount available, don't let
 	buf_len become negative.

Mon Oct  9 14:57:48 1995  Roland McGrath  <roland@churchy.gnu.ai.mit.edu>

        * Makefile: Specify shared library dependencies.

Thu Sep  7 09:08:30 1995  Miles Bader  <miles@churchy.gnu.ai.mit.edu>
